evaluation-run/571/k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wger
  labels:
    app.kubernetes.io/part-of: wger
