evaluation-run/571/k8s/prod/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: wger
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: wger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/part-of: wger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/part-of: wger
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: nginx
          image: docker.io/nginx:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: static-data
              mountPath: /wger/static
              readOnly: true
            - name: media-data
              mountPath: /wger/media
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: static-data
          persistentVolumeClaim:
            claimName: static-data
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
